--- a/src/app/shared/components/login-page/login-page.component.scss
+++ b/src/app/shared/components/login-page/login-page.component.scss
@@ -30,7 +30,8 @@ body {
 .container {
     margin: auto;
     width: 650px;
-    height: 550px;
+    min-height: 80vh;
+    // height: 550px;
     position: relative;
 }
 
@@ -39,7 +40,7 @@ body {
     width: 650px;
     height: 415px;
     position: absolute;
-    top: 25%;
+    top: 14%;
     border-radius: 5px;
     box-shadow: 5px 5px 5px rgba(0, 0, 0, .1);
 }
@@ -78,12 +79,21 @@ body {
 }
 
 
+.zeroTransform {
+  transform: translateX(0%);
+}
+
+.eightyTransform {
+  transform: translateX(80%);
+}
+
+
 /* font & button styling */
 
 h1 {
     font-family: $sans-serif;
     text-align: center;
-    margin-top: 82px;
+    // margin-top: 82px;
     text-transform: uppercase;
     color: $white;
     font-size: 2em;
@@ -107,7 +117,7 @@ h1 {
 
 .account {
     margin-top: 50%;
-    font-size: 10px;
+    font-size: 15px;
 }
 
 p {
@@ -126,7 +136,7 @@ span {
     position: absolute;
     width: auto;
     height: 170px;
-    top: 38%;
+    top: 34%;
     left: 23%;
     opacity: .9;
 }
@@ -134,10 +144,11 @@ span {
 .smaller {
     width: auto;
     height: 170px;
-    top: 38%;
+    top: 34%;
     left: 30%;
     opacity: .9;
 }
+
 
 button {
     padding: 12px;
@@ -170,26 +181,27 @@ button {
 
 /* form styling */
 
-form {
-    display: flex;
-    align-items: center !important;
-    flex-direction: column;
-    padding-top: 7px;
-}
+// form {
+//     display: flex;
+//     align-items: center !important;
+//     flex-direction: column;
+//     padding-top: 7px;
+// }
 
-.more-padding {
-    padding-top: 28px;
-    // input {
-    //     padding: 12px;
-    // }
-    //     .submit {
-    //         margin-top: 15px;
-    //     }
-}
+// .more-padding {
+//     padding-top: 28px;
+//     // input {
+//     //     padding: 12px;
+//     // }
+//     //     .submit {
+//     //         margin-top: 15px;
+//     //     }
+// }
 
 .submit {
     // margin-top: 25px;
     padding: 12px;
+    width: 200px;
     border-color: $pink;
     &:hover {
         background: $lavender;
@@ -229,6 +241,11 @@ label {
     font-size: 0.8em;
     letter-spacing: 1px;
 }
+
+
+////////////////////////////////////////////////////////////////////////////////////////////////
+
+
 // login second
 *,:after,:before{box-sizing:border-box}
   .clearfix:after,.clearfix:before{content:'';display:table}
@@ -236,20 +253,31 @@ label {
   a{color:inherit;text-decoration:none}
 
   .login-wrap1{
-    width:100%;
-    margin:auto;
-    max-width:525px;
-    min-height:670px;
+    // width:100%;
+    // margin:auto;
+    // min-width: 100wv;
+    min-height:89.5vh;
     position:relative;
     background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+    background-size: cover;
     box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
   }
   .login-html1{
     width:100%;
     height:100%;
     position:absolute;
-    padding:90px 70px 50px 70px;
+    padding: 50px 70px 20px 70px;
     background:rgba(40,57,101,.9);
+  }
+
+  @media(max-width: 425px) {
+    .login-html1{
+      width:100%;
+      height:100%;
+      position:absolute;
+      padding: 50px 40px 20px 40px;
+      background:rgba(40,57,101,.9);
+    }
   }
   .login-html1 .sign-in-htm1,
   .login-html1 .sign-up-htm1{
@@ -288,7 +316,7 @@ label {
     border-color:#1161ee;
   }
   .login-form1{
-    min-height:345px;
+    min-height: 410px;
     position:relative;
     perspective:1000px;
     transform-style:preserve-3d;
@@ -375,26 +403,26 @@ label {
   .foot-lnk1{
     text-align:center;
   }
-@media (max-width: 800px){
+// @media (max-width: 800px){
 
-  .large-screen{
-    display: none;
-  }
-  .small-screen{
-    display: block;
-  }
-  form{
-    all: unset;
-  }
-}
-@media (min-width: 800px){
-  .large-screen{
-    display: block;
-  }
-  .small-screen{
-    display: none;
-  }
-}
+//   .large-screen{
+//     display: none;
+//   }
+//   .small-screen{
+//     display: block;
+//   }
+//   form{
+//     all: unset;
+//   }
+// }
+// @media (min-width: 800px){
+//   .large-screen{
+//     display: block;
+//   }
+//   .small-screen{
+//     display: none;
+//   }
+// }
 // .checkbox {
 //     display: inline;
 //     white-space: nowrap;
