--- a/src/styles.scss
+++ b/src/styles.scss
@@ -51,6 +51,16 @@ body {
     justify-content: center;
     flex-flow:row wrap;
   }
+
+    /* input error */ 
+    .form-control.ng-invalid.ng-touched {
+      border-color: red ;
+  }
+  
+  .form-control.ng-touched.ng-valid {
+    border-color: green;
+  }
+  
   // loading work
   @keyframes loader {
     0%, 10%, 100% {
