--- a/src/app/shared/components/login-page/login-page.component.html
+++ b/src/app/shared/components/login-page/login-page.component.html
@@ -1,107 +1,109 @@
-<div class="container d-none d-md-block mb-5">
-    <div class="welcome">
-        <div class="pinkbox px-5 py-5" [ngClass]="role === 'tourist' ? 'zeroTransform' : 'eightyTransform'">
-            <div class="signup " [ngClass]="role === 'tourist' ? 'nodisplay' : ''" id="guide">
-                <h2 class="text-white text-center" style="margin-bottom: 50px;">Guide Login</h2>
-                <form [formGroup]="LoginForm" autocomplete="off">
-                    <div class="md-form form-group mb-5">
-                        <input mdbInput type="email" formControlName="email" id="form1" class="form-control">
-                        <label for="form1">Email</label>
-                        <!-- <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
-                    </div>
-                    <div class="md-form form-group mb-5">
-                        <input mdbInput type="password" formControlName="password" id="form2" class="form-control">
-                        <label for="form2">password</label>
-                        <a class="mt-2 text-info float-right">Forgot Password?</a>
-                        <!-- <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
-                    </div>
-                    <div class="md-form form-group" style="margin-top: 90px;">
-                        <button type="submit" class="button submit" (click)="login('guide')">Log in</button>
-                    </div>
-                </form>
-                <div class="text-center white-text"><a [routerLink]="['/guide/show-register']">Are you a guide? Register now</a></div>
-            </div>
-            <div class="signin" [ngClass]="role === 'tourist' ? '' : 'nodisplay'" id="tourist">
-                <h2 class="text-white text-center" style="margin-bottom: 50px;">Tourist Login</h2>
-                <form [formGroup]="LoginForm"  autocomplete="off">
-                    <div class="md-form form-group mb-5">
-                        <input mdbInput type="email" formControlName="email" id="form3" class="form-control">
-                        <label for="form3">Email</label>
-                        <!-- <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
-                    </div>
-                    <div class="md-form form-group mb-5">
-                        <input mdbInput type="password" formControlName="password" id="form4" class="form-control">
-                        <label for="form4">password</label>
-                        <a class="mt-2 text-info float-right">Forgot Password?</a>
+<div class="container-fluid bg">
+    <div class="container d-none d-md-block mb-5">
+        <div class="welcome">
+            <div class="pinkbox px-5 py-5" [ngClass]="role === 'tourist' ? 'zeroTransform' : 'eightyTransform'">
+                <div class="signup " [ngClass]="role === 'tourist' ? 'nodisplay' : ''" id="guide">
+                    <h2 class="text-white text-center" style="margin-bottom: 50px;">Guide Login</h2>
+                    <form [formGroup]="LoginForm" autocomplete="off">
+                        <div class="md-form form-group mb-5">
+                            <input mdbInput type="email" formControlName="email" id="form1" class="form-control">
+                            <label for="form1">Email</label>
+                            <!-- <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
+                        </div>
+                        <div class="md-form form-group mb-5">
+                            <input mdbInput type="password" formControlName="password" id="form2" class="form-control">
+                            <label for="form2">password</label>
+                            <a class="mt-2 text-info float-right">Forgot Password?</a>
+                            <!-- <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
+                        </div>
+                        <div class="md-form form-group" style="margin-top: 90px;">
+                            <button type="submit" class="button submit" (click)="login('guide')">Log in</button>
+                        </div>
+                    </form>
+                    <div class="text-center white-text"><a [routerLink]="['/guide/show-register']">Are you a guide? Register now</a></div>
+                </div>
+                <div class="signin" [ngClass]="role === 'tourist' ? '' : 'nodisplay'" id="tourist">
+                    <h2 class="text-white text-center" style="margin-bottom: 50px;">Tourist Login</h2>
+                    <form [formGroup]="LoginForm" autocomplete="off">
+                        <div class="md-form form-group mb-5">
+                            <input mdbInput type="email" formControlName="email" id="form3" class="form-control">
+                            <label for="form3">Email</label>
+                            <!-- <small *ngIf="f.email.value == '' && (f.email.dirty || f.email.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
+                        </div>
+                        <div class="md-form form-group mb-5">
+                            <input mdbInput type="password" formControlName="password" id="form4" class="form-control">
+                            <label for="form4">password</label>
+                            <a class="mt-2 text-info float-right">Forgot Password?</a>
 
-                        <!-- <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
-                    </div>
-                    <div class="md-form form-group" style="margin-top: 90px;">
-                        <button type="submit" class="button submit " (click)="login('tourist')">Login</button>
-                    </div>
-                </form>
-                <div class="text-center white-text"><a [routerLink]="['/tourists/register']">Wanna explore? Register now</a></div>
+                            <!-- <small *ngIf="f.password.value == '' && (f.password.dirty || f.password.touched )" id="passwordHelpBlock" class="form-text text-muted">This field is required.</small> -->
+                        </div>
+                        <div class="md-form form-group" style="margin-top: 90px;">
+                            <button type="submit" class="button submit " (click)="login('tourist')">Login</button>
+                        </div>
+                    </form>
+                    <div class="text-center white-text"><a [routerLink]="['/tourists/register']">Wanna explore? Register now</a></div>
+                </div>
             </div>
-        </div>
-        <div class="leftbox">
-            <h2 class="title mt-4"><b><span>VOILA</span>&<br>Tourist</b></h2>
-            <p class="desc">pick your perfect <span>bouquet</span></p>
-            <img class="flower smaller" src="assets\images\ouch-guide-login.png" alt="" border="0"><br>
-            <p class="account">Are you a traveller?</p>
-            <button [routerLink]="['/login/tourist']" class="button" id="signin">Click Here</button>
-        </div>
-        <div class="rightbox">
-            <h2 class="title mt-4"><b><span>VOILA</span>&<br>Guide</b></h2>
-            <p class="desc"> pick your perfect <span>bouquet</span></p>
-            <img class="flower" src="assets\images\tourist-ouch-pic-medium.png" /><br>
-            <p class="account">Are you a guide?</p>
-            <button [routerLink]="['/login/guide']" class="button" id="signup">Click Here</button>
+            <div class="leftbox">
+                <h2 class="title mt-4"><b><span>VOILA</span>&<br>Tourist</b></h2>
+                <p class="desc">pick your perfect <span>bouquet</span></p>
+                <img class="flower smaller" src="assets\images\ouch-guide-login.png" alt="" border="0"><br>
+                <p class="account">Are you a traveller?</p>
+                <button [routerLink]="['/login/tourist']" class="button" id="signin">Click Here</button>
+            </div>
+            <div class="rightbox">
+                <h2 class="title mt-4"><b><span>VOILA</span>&<br>Guide</b></h2>
+                <p class="desc"> pick your perfect <span>bouquet</span></p>
+                <img class="flower" src="assets\images\tourist-ouch-pic-medium.png" /><br>
+                <p class="account">Are you a guide?</p>
+                <button [routerLink]="['/login/guide']" class="button" id="signup">Click Here</button>
+            </div>
         </div>
     </div>
-</div>
-<!-- </div> -->
-<!-- green guide pic attribution <a href='https://www.freepik.com/free-photos-vectors/travel'>Travel vector created by stories - www.freepik.com</a> -->
-<div class="d-block d-md-none ">
-  <div class="login-wrap1">
-	<div class="login-html1">
-		<input id="tab-1" type="radio" name="tab" class="sign-in" [routerLink]="['/login/guide']" [checked]="role === 'guide'"><label for="tab-1" class="tab">Guide</label>
-		<input id="tab-2" type="radio" name="tab" class="sign-up" [routerLink]="['/login/tourist']" [checked]="role === 'tourist'"><label for="tab-2" class="tab">Tourist</label>
-		<div class="login-form1 mt-5">
-			<div class="sign-in-htm1">
-                <form  [formGroup]="LoginForm" autocomplete="off">
-                    <div class="group1 form-group mb-4">
-                        <label for="form1" class="label">Email</label>
-                        <input mdbInput type="email" formControlName="email" id="form1" class="input">
+    <!-- </div> -->
+    <!-- green guide pic attribution <a href='https://www.freepik.com/free-photos-vectors/travel'>Travel vector created by stories - www.freepik.com</a> -->
+    <div class="d-block d-md-none ">
+        <div class="login-wrap1">
+            <div class="login-html1">
+                <input id="tab-1" type="radio" name="tab" class="sign-in" [routerLink]="['/login/guide']" [checked]="role === 'guide'"><label for="tab-1" class="tab">Guide</label>
+                <input id="tab-2" type="radio" name="tab" class="sign-up" [routerLink]="['/login/tourist']" [checked]="role === 'tourist'"><label for="tab-2" class="tab">Tourist</label>
+                <div class="login-form1 mt-5">
+                    <div class="sign-in-htm1">
+                        <form [formGroup]="LoginForm" autocomplete="off">
+                            <div class="group1 form-group mb-4">
+                                <label for="form1" class="label">Email</label>
+                                <input mdbInput type="email" formControlName="email" id="form1" class="input">
+                            </div>
+                            <div class="group1 form-group mb-5">
+                                <label for="form2" class="label">Password</label>
+                                <input mdbInput type="password" formControlName="password" id="form2" class="input">
+                                <a class="mt-2 text-info float-right">Forgot Password?</a>
+                            </div>
+                            <div class="group1 form-group" style="margin-top: 70px;">
+                                <input type="submit" class="button mb-4" (click)="login('guide')" value="LogIn">
+                                <p style="font-size: 18px;"><a class="text-center white-text" [routerLink]="['/guide/show-register']">Are you a guide?  <br> Register now</a></p>
+                            </div>
+                        </form>
                     </div>
-                    <div class="group1 form-group mb-5">
-                        <label for="form2" class="label">Password</label>
-                        <input mdbInput type="password" formControlName="password" id="form2" class="input">
-                        <a class="mt-2 text-info float-right">Forgot Password?</a>
+                    <div class="sign-up-htm1">
+                        <form [formGroup]="LoginForm" autocomplete="off">
+                            <div class="group1 form-group mb-4">
+                                <label for="form1" class="label">Email</label>
+                                <input mdbInput type="email" formControlName="email" id="form1" class="input">
+                            </div>
+                            <div class="group1 form-group mb-5">
+                                <label for="form2" class="label">Password</label>
+                                <input mdbInput type="password" formControlName="password" id="form2" class="input">
+                                <a class="mt-2 text-info float-right">Forgot Password?</a>
+                            </div>
+                            <div class="group1 form-group" style="margin-top: 70px;">
+                                <input type="submit" class="button mb-4" (click)="login('tourist')" value="LogIn">
+                                <p style="font-size: 18px;"><a class="text-center white-text" [routerLink]="['/tourists/register']">Wanna Explore?  <br> Register now</a></p>
+                            </div>
+                        </form>
                     </div>
-                    <div class="group1 form-group" style="margin-top: 70px;">
-                        <input type="submit" class="button mb-4" (click)="login('guide')" value="LogIn">
-                        <p style="font-size: 18px;"><a class="text-center white-text" [routerLink]="['/guide/show-register']">Are you a guide?  <br> Register now</a></p>
-                    </div>
-                </form>
-			</div>
-			<div class="sign-up-htm1">
-                <form [formGroup]="LoginForm" autocomplete="off">
-                    <div class="group1 form-group mb-4">
-                        <label for="form1" class="label">Email</label>
-                        <input mdbInput type="email" formControlName="email" id="form1" class="input">
-                    </div>
-                    <div class="group1 form-group mb-5">
-                    <label for="form2" class="label">Password</label>
-                        <input mdbInput type="password" formControlName="password" id="form2" class="input">
-                        <a class="mt-2 text-info float-right">Forgot Password?</a>
-                    </div>
-                    <div class="group1 form-group" style="margin-top: 70px;">
-                        <input type="submit" class="button mb-4" (click)="login('tourist')" value="LogIn">
-                        <p style="font-size: 18px;"><a class="text-center white-text" [routerLink]="['/tourists/register']">Wanna Explore?  <br> Register now</a></p>
-                    </div>
-                </form>
-			</div>
-		</div>
-	</div>
-  </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
