--- a/src/app/shared/components/login-page/login-page.component.scss
+++ b/src/app/shared/components/login-page/login-page.component.scss
@@ -1,36 +1,57 @@
 // yahi tkk h
-
 .all-bg {
-  height: max-content !important;
-  background: linear-gradient(235deg, #553d67, #faed26, #c87068, #7bd3c3, #b6f455, #f76c6c);
-  background-size: 1200% 1200%;
-  z-index: -1;
-  -webkit-animation: AnimationName 31s ease infinite;
-  -moz-animation: AnimationName 31s ease infinite;
-  animation: AnimationName 31s ease infinite;
+    height: max-content !important;
+    background: linear-gradient(235deg, #553d67, #faed26, #c87068, #7bd3c3, #b6f455, #f76c6c);
+    background-size: 1200% 1200%;
+    z-index: -1;
+    -webkit-animation: AnimationName 31s ease infinite;
+    -moz-animation: AnimationName 31s ease infinite;
+    animation: AnimationName 31s ease infinite;
 }
 
 @-webkit-keyframes AnimationName {
-  0%{background-position:0% 96%}
-  50%{background-position:100% 5%}
-  100%{background-position:0% 96%}
+    0% {
+        background-position: 0% 96%
+    }
+    50% {
+        background-position: 100% 5%
+    }
+    100% {
+        background-position: 0% 96%
+    }
 }
+
 @-moz-keyframes AnimationName {
-  0%{background-position:0% 96%}
-  50%{background-position:100% 5%}
-  100%{background-position:0% 96%}
+    0% {
+        background-position: 0% 96%
+    }
+    50% {
+        background-position: 100% 5%
+    }
+    100% {
+        background-position: 0% 96%
+    }
 }
+
 @keyframes AnimationName {
-  0%{background-position:0% 96%}
-  50%{background-position:100% 5%}
-  100%{background-position:0% 96%}
+    0% {
+        background-position: 0% 96%
+    }
+    50% {
+        background-position: 100% 5%
+    }
+    100% {
+        background-position: 0% 96%
+    }
 }
-.text h1{
-  font-size: 100px;
-  overflow: hidden;
-  margin: 0;
-  z-index: 1;
+
+.text h1 {
+    font-size: 100px;
+    overflow: hidden;
+    margin: 0;
+    z-index: 1;
 }
+
 .center-class {
     justify-content: center;
     text-align: center;
@@ -52,8 +73,9 @@ $sans-serif: 'Open Sans',
 sans-serif;
 $serif: 'Lora',
 serif;
-body {
-    background: $lavender;
+.bg {
+    background: linear-gradient(180deg, rgba(255, 255, 255, 0.9671218829328606) 0%, rgba(235, 216, 219, 1) 100%);
+    height: 100%;
 }
 
 
@@ -111,13 +133,12 @@ body {
     right: -2%;
 }
 
-
 .zeroTransform {
-  transform: translateX(0%);
+    transform: translateX(0%);
 }
 
 .eightyTransform {
-  transform: translateX(80%);
+    transform: translateX(80%);
 }
 
 
@@ -182,7 +203,6 @@ span {
     opacity: .9;
 }
 
-
 button {
     padding: 12px;
     font-family: $sans-serif;
@@ -220,7 +240,6 @@ button {
 //     flex-direction: column;
 //     padding-top: 7px;
 // }
-
 // .more-padding {
 //     padding-top: 28px;
 //     // input {
@@ -230,7 +249,6 @@ button {
 //     //         margin-top: 15px;
 //     //     }
 // }
-
 .submit {
     // margin-top: 25px;
     padding: 12px;
@@ -275,169 +293,206 @@ label {
     letter-spacing: 1px;
 }
 
-
 ////////////////////////////////////////////////////////////////////////////////////////////////
-
-
 // login second
-*,:after,:before{box-sizing:border-box}
-  .clearfix:after,.clearfix:before{content:'';display:table}
-  .clearfix:after{clear:both;display:block}
-  a{color:inherit;text-decoration:none}
+*,
+:after,
+:before {
+    box-sizing: border-box
+}
 
-  .login-wrap1{
+.clearfix:after,
+.clearfix:before {
+    content: '';
+    display: table
+}
+
+.clearfix:after {
+    clear: both;
+    display: block
+}
+
+a {
+    color: inherit;
+    text-decoration: none
+}
+
+.login-wrap1 {
     // width:100%;
     // margin:auto;
     // min-width: 100wv;
     // min-height:89.5vh;
     // position:relative;
-    background:url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
+    background: url(https://raw.githubusercontent.com/khadkamhn/day-01-login-form/master/img/bg.jpg) no-repeat center;
     background-size: cover;
-    box-shadow:0 12px 15px 0 rgba(0,0,0,.24),0 17px 50px 0 rgba(0,0,0,.19);
-  }
-  .login-html1{
-    width:100%;
+    box-shadow: 0 12px 15px 0 rgba(0, 0, 0, .24), 0 17px 50px 0 rgba(0, 0, 0, .19);
+}
+
+.login-html1 {
+    width: 100%;
     // height:100%;
     // position:absolute;
     padding: 50px 70px 20px 70px;
-    background:rgba(40,57,101,.9);
-  }
+    background: rgba(40, 57, 101, .9);
+}
 
-  @media(max-width: 425px) {
-    .login-html1{
-      width:100%;
-      // height:100%;
-      // position:absolute;
-      padding: 50px 40px 20px 40px;
-      background:rgba(40,57,101,.9);
+@media(max-width: 425px) {
+    .login-html1 {
+        width: 100%;
+        // height:100%;
+        // position:absolute;
+        padding: 50px 40px 20px 40px;
+        background: rgba(40, 57, 101, .9);
     }
-  }
-  .login-html1 .sign-in-htm1,
-  .login-html1 .sign-up-htm1{
-    top:0;
-    left:0;
-    right:0;
-    bottom:0;
-    position:absolute;
-    transform:rotateY(180deg);
-    backface-visibility:hidden;
-    transition:all .4s linear;
+}
+
+.login-html1 .sign-in-htm1,
+.login-html1 .sign-up-htm1 {
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+    transform: rotateY(180deg);
+    backface-visibility: hidden;
+    transition: all .4s linear;
     overflow: hidden;
-  }
-  .login-html1 .sign-in,
-  .login-html1 .sign-up,
-  .login-form1 .group1 .check
-  {
-    display:none;
-  }
-  .login-html1 .tab,
-  .login-form1 .group1 .label,
-  .login-form1 .group1 .button{
-    text-transform:uppercase;
-  }
-  .login-html1 .tab{
-    font-size:22px;
-    margin-right:15px;
-    padding-bottom:5px;
-    margin:0 15px 10px 0;
-    display:inline-block;
-    border-bottom:2px solid transparent;
-  }
-  .login-html1 .sign-in:checked + .tab,
-  .login-html1 .sign-up:checked + .tab{
-    color:#fff;
-    border-color:#1161ee;
-  }
-  .login-form1{
+}
+
+.login-html1 .sign-in,
+.login-html1 .sign-up,
+.login-form1 .group1 .check {
+    display: none;
+}
+
+.login-html1 .tab,
+.login-form1 .group1 .label,
+.login-form1 .group1 .button {
+    text-transform: uppercase;
+}
+
+.login-html1 .tab {
+    font-size: 22px;
+    margin-right: 15px;
+    padding-bottom: 5px;
+    margin: 0 15px 10px 0;
+    display: inline-block;
+    border-bottom: 2px solid transparent;
+}
+
+.login-html1 .sign-in:checked+.tab,
+.login-html1 .sign-up:checked+.tab {
+    color: #fff;
+    border-color: #1161ee;
+}
+
+.login-form1 {
     min-height: 410px;
-    position:relative;
-    perspective:1000px;
-    transform-style:preserve-3d;
-  }
-  .login-form1 .group1{
-    margin-bottom:15px;
-  }
-  .login-form1 .group1 .label,
-  .login-form1 .group1 .input,
-  .login-form1 .group1 .button{
-    width:100%;
-    color:#fff;
-    display:block;
-  }
-  .login-form1 .group1 .input,
-  .login-form1 .group1 .button{
-    border:none;
-    padding:15px 20px;
-    border-radius:25px;
-    background:rgba(255,255,255,.1);
-  }
-  .login-form1 .group1 input[data-type="password"]{
-    -webkit-text-security:circle;
-  }
-  .login-form1 .group .label{
-    color:#aaa;
-    font-size:12px;
-  }
-  .login-form1 .group1 .button{
-    background:#1161ee;
-  }
-  .login-form1 .group1 label .icon{
-    width:15px;
-    height:15px;
-    border-radius:2px;
-    position:relative;
-    display:inline-block;
-    background:rgba(255,255,255,.1);
-  }
-  .login-form1 .group1 label .icon:before,
-  .login-form1 .group1 label .icon:after{
-    content:'';
-    width:10px;
-    height:2px;
-    background:#fff;
-    position:absolute;
-    transition:all .2s ease-in-out 0s;
-  }
-  .login-form1 .group1 label .icon:before{
-    left:3px;
-    width:5px;
-    bottom:6px;
-    transform:scale(0) rotate(0);
-  }
-  .login-form1 .group1 label .icon:after{
-    top:6px;
-    right:0;
-    transform:scale(0) rotate(0);
-  }
-  .login-form1 .group1 .check:checked + label{
-    color:#fff;
-  }
-  .login-form1 .group1 .check:checked + label .icon{
-    background:#1161ee;
-  }
-  .login-form1 .group1 .check:checked + label .icon:before{
-    transform:scale(1) rotate(45deg);
-  }
-  .login-form1 .group1 .check:checked + label .icon:after{
-    transform:scale(1) rotate(-45deg);
-  }
-  .login-html1 .sign-in:checked + .tab + .sign-up + .tab + .login-form1 .sign-in-htm1{
-    transform:rotate(0);
-  }
-  .login-html1 .sign-up:checked + .tab + .login-form1 .sign-up-htm1{
-    transform:rotate(0);
-  }
+    position: relative;
+    perspective: 1000px;
+    transform-style: preserve-3d;
+}
 
-  .hr{
-    height:2px;
-    margin:60px 0 50px 0;
-    background:rgba(255,255,255,.2);
-  }
-  .foot-lnk1{
-    text-align:center;
-  }
+.login-form1 .group1 {
+    margin-bottom: 15px;
+}
+
+.login-form1 .group1 .label,
+.login-form1 .group1 .input,
+.login-form1 .group1 .button {
+    width: 100%;
+    color: #fff;
+    display: block;
+}
+
+.login-form1 .group1 .input,
+.login-form1 .group1 .button {
+    border: none;
+    padding: 15px 20px;
+    border-radius: 25px;
+    background: rgba(255, 255, 255, .1);
+}
+
+.login-form1 .group1 input[data-type="password"] {
+    -webkit-text-security: circle;
+}
+
+.login-form1 .group .label {
+    color: #aaa;
+    font-size: 12px;
+}
+
+.login-form1 .group1 .button {
+    background: #1161ee;
+}
+
+.login-form1 .group1 label .icon {
+    width: 15px;
+    height: 15px;
+    border-radius: 2px;
+    position: relative;
+    display: inline-block;
+    background: rgba(255, 255, 255, .1);
+}
+
+.login-form1 .group1 label .icon:before,
+.login-form1 .group1 label .icon:after {
+    content: '';
+    width: 10px;
+    height: 2px;
+    background: #fff;
+    position: absolute;
+    transition: all .2s ease-in-out 0s;
+}
+
+.login-form1 .group1 label .icon:before {
+    left: 3px;
+    width: 5px;
+    bottom: 6px;
+    transform: scale(0) rotate(0);
+}
+
+.login-form1 .group1 label .icon:after {
+    top: 6px;
+    right: 0;
+    transform: scale(0) rotate(0);
+}
+
+.login-form1 .group1 .check:checked+label {
+    color: #fff;
+}
+
+.login-form1 .group1 .check:checked+label .icon {
+    background: #1161ee;
+}
+
+.login-form1 .group1 .check:checked+label .icon:before {
+    transform: scale(1) rotate(45deg);
+}
+
+.login-form1 .group1 .check:checked+label .icon:after {
+    transform: scale(1) rotate(-45deg);
+}
+
+.login-html1 .sign-in:checked+.tab+.sign-up+.tab+.login-form1 .sign-in-htm1 {
+    transform: rotate(0);
+}
+
+.login-html1 .sign-up:checked+.tab+.login-form1 .sign-up-htm1 {
+    transform: rotate(0);
+}
+
+.hr {
+    height: 2px;
+    margin: 60px 0 50px 0;
+    background: rgba(255, 255, 255, .2);
+}
+
+.foot-lnk1 {
+    text-align: center;
+}
+
 // @media (max-width: 800px){
-
 //   .large-screen{
 //     display: none;
 //   }
